--- a/Index.html
+++ b/Index.html
@@ -74,12 +74,10 @@ mind and disciplined eye". Lucky for us, I wear my spectacles diligently.<br><br
 	<div class="block">
 		<p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Click here to access my Projects :<br><br>
 		<a target="_blank" href="https://github.com/beingnehallish"><img class="img3" width="50px" height="50px"src="git.jpg"></a>
-    <a target="_blank" href="https://linkedin.com/nehal--gupta"><img class="img3" width="50px" height="50px"src="linkedin.jpg"></a></p>
+    <a target="_blank" href="https://www.linkedin.com/in/nehal--gupta/"><img class="img3" width="50px" height="50px"src="linkedin.jpg"></a></p>
 
   </div><br><hr>
-
-
-	<div style="margin-left: 50px;">
+<div style="margin-left: 50px;">
     <section style="margin-left:50px ;">
       <h3>1. Portfolio Website</h3>
       <div style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"><br> <ol><li class="a"><a target="_blank" href="l1t1.txt">Criteria for creating a Personal Portfolio</a></li><li class="a"><a target="_blank" href="https://github.com/beingnehallish/Portfolio">GitHub for Code</a></li>
